# nimbus

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  run-nimbus.sh  sample-config.yml  setup.sh  watchdog.sh
nimbus/: __main__.py  bustimes.py  bustimesorg.py  config.py  console.py  device.py  epaper.py  nextbus.py  nextbuses.py  oxontime.py  touch.py
nimbus/nextbus/: __init__.py
test/: test_nextbus.py
test/fixtures/: due.html  later.html  mixed.html  next-day.html  soon.html
